--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,16 @@ form label {
     border-radius: 0.3em;
 }
 
+form #expressionDisplay {
+	clear: both;
+	display: block;
+	text-align: right;
+	font-size: 2em;
+	font-family: monospace;
+	margin: 0 0.6em;
+	padding: 0.2em;
+}
+
 input[type="text"] {
     text-align: right;
     font-size: 3em;
